Fixed sponsor button being stretched out

--- a/app/assets/stylesheets/home/layout.scss
+++ b/app/assets/stylesheets/home/layout.scss
@@ -286,10 +286,6 @@ body {
   }
 }
 
-.sponsor a {
-  display:block;
-}
-
 .sponsor__wrapper {
   margin: 0 auto;
   max-width: 1000px;
